<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_id"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/id_route"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:ems="2"
            android:inputType="numberSigned"
            app:layout_constraintStart_toEndOf="@+id/text_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_type"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/id_route"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:ems="2"
            android:inputType="numberSigned"
            app:layout_constraintStart_toEndOf="@+id/text_type"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_name_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_name_route"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_route"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/text_name_route"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_direction"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_id" />

        <Spinner
            android:id="@+id/direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/text_direction"
            app:layout_constraintTop_toBottomOf="@+id/text_type" />

        <TextView
            android:id="@+id/text_id_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_id_station"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/direction"
            app:layout_constraintTop_toBottomOf="@+id/text_type" />

        <EditText
            android:id="@+id/id_station"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="2"
            android:inputType="numberSigned"
            app:layout_constraintStart_toEndOf="@+id/text_id_station"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <TextView
            android:id="@+id/text_name_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_station_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_direction" />

        <EditText
            android:id="@+id/name_station"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/text_name_station"
            app:layout_constraintTop_toBottomOf="@+id/text_id_station" />

        <TextView
            android:id="@+id/text_workday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_workday"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_station" />

        <TextView
            android:id="@+id/text_holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_holiday"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_station" />

        <TextView
            android:id="@+id/text_id_time_workday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_workday" />

        <EditText
            android:id="@+id/id_time_workday"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_id_time_workday" />

        <TextView
            android:id="@+id/text_time_workday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_time"
            app:layout_constraintStart_toEndOf="@+id/text_id_time_workday"
            app:layout_constraintTop_toBottomOf="@+id/text_workday" />

        <EditText
            android:id="@+id/time_station_workday"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/id_time_workday"
            app:layout_constraintTop_toBottomOf="@+id/text_time_workday" />

        <Button
            android:id="@+id/btn_add_time_workday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/text_btn_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_time_workday" />

        <TextView
            android:id="@+id/text_id_time_holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_id"
            app:layout_constraintStart_toEndOf="@+id/text_time_workday"
            app:layout_constraintTop_toBottomOf="@+id/text_holiday" />

        <EditText
            android:id="@+id/id_time_holiday"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            app:layout_constraintStart_toEndOf="@+id/time_station_workday"
            app:layout_constraintTop_toBottomOf="@+id/text_id_time_holiday" />

        <TextView
            android:id="@+id/text_time_holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_time"
            app:layout_constraintStart_toEndOf="@+id/text_id_time_holiday"
            app:layout_constraintTop_toBottomOf="@+id/text_holiday" />

        <EditText
            android:id="@+id/time_station_holiday"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toEndOf="@+id/id_time_holiday"
            app:layout_constraintTop_toBottomOf="@+id/text_time_holiday" />

        <Button
            android:id="@+id/btn_add_time_holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:text="@string/text_btn_add"
            app:layout_constraintStart_toEndOf="@+id/btn_add_time_workday"
            app:layout_constraintTop_toBottomOf="@+id/id_time_holiday" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="168dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_station"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_time_holiday" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="168dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_time_workday" />

        <Button
            android:id="@+id/btn_add_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/text_btn_add_station"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>